# lpa-analysis

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
Coassin_pipeline/: README.md  coassin_pipeline.sh  coassin_pipeline_sge.sh  coassin_pipeline_slurm.sh
Coassin_pipeline/app_tar/: bwa.tgz  coassin_pipeline_data.tgz
Coassin_pipeline/data_inflow/: bam_list.txt
EIGEN/: EIGENToolkit.py  README.md  complete.pca.par
METAL/: METALToolkit.py  METAL_toolkit.py  README.md  meta_analysis.sh  metal_script.txt
SGE/: README.md  bam2fastq_only.txt  bam2fastq_only_new.sh  lasso.sh  lpa_final.sh
VCF/: README.md  file_management.ipynb  lpa_analysis_output.ipynb  lpa_analysis_test.ipynb  lpa_vcf_translate.py  requirements.txt  vcf_translate.py
VCF/lpa_pipeline/: preprocessing.py  utils.py  validator.py  vcf_translate.py
VCF_and_data_analysis/: Lasso.py  README.md  conda_setting.sh  file_management.ipynb  spec-list.txt
VCF_and_data_analysis/lpa_pipeline/: data_management.py  path_settings.py  validator.py  (+1 more)
data_management/: data_management.py  path_settings.py  settings.py  statistical.py  utils.py  validator.py
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
environment/: README.md  environment.yml  spec-list.txt
pipeline/: METAL_toolkit.py  README.md  association.py  encodings.py  freq_table_generator.py  locus_collector.py  snps_filter.py
tests/: test_lpa_pipeline.py
visualizations/: Manuscript_Visualizations.Rmd  PCAScatterPlot.py  README.md  VennPlot.py  sessionInfo.txt  visualization_freqs.ipynb
(+71 files in other folders)
