[tool.poetry]
name = "lpa_pipeline"
version = "0.1.0"
description = "The pipeline analyzing the output of Coassin et.al's KIV-2 region analysis pipeline"
authors = ["Yihao Li", "Badri Vardarajan", "Soffer Gissette"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.12"
numpy = {version = "1.21.4", python = "=3.8.12"}
pandas = "1.3.4"
tqdm = "4.65.0"
xlsxwriter = "3.1.2"
statsmodels = "0.13.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
myst-nb = {version = "^0.17.2", python = "3.8"}
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
